# backend

./: README.md  manage.py  pyproject.toml  requirements.txt
accounts/: urls.py
accounts/admin/: admin.py
accounts/migrations/: 0001_initial.py  0002_alter_user_foto.py
accounts/models/: manager.py  user.py
accounts/serializers/: __init__.py  user_login_serializer.py  user_serializer.py
accounts/tests/: user_tests.py
accounts/views/: views.py
app/: __init__.py  __main__.py
arriendos/: urls.py
arriendos/admin/: __init__.py  imagen_admin.py  publicacion_admin.py  resena_admin.py  solicitud_admin.py
arriendos/migrations/: 0001_initial.py  0002_remove_publicacion_valid_tipo_residencia_and_more.py
arriendos/models/: __init__.py  imagen.py  publicacion.py  resena.py  solicitud.py
arriendos/serializers/: imagen_serializer.py  publicacion_serializer.py  resena_serializer.py  solicitud_serializer.py
arriendos/tests/: __init__.py  publicacion_tests.py  resena_tests.py  solicitud_tests.py
arriendos/views/: notificacion_views.py  publicacion_views.py  resena_views.py  solicitud_views.py
estu_residencia/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  resources.py
