[tool.poetry]
name = "backend"
version = "0.0.0"
description = "backend code for EstuResidencia."
authors = ["Esteban García Carmona <esgarciac@unal.edu.co>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
Flask = "^2.3.2"


[tool.poetry.dev-dependencies]
coverage = "^7.3.0"
pre-commit = "^3.3.3"
pytest-flask = "^1.2.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
