[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for EstuResidencia"
authors = ["Estebanano Gracia Caremona <esgarciac@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
